add support for different racing series
