# backend/spec/swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: Rawe Ceek API
-  version: 1.3.0
+  version: 1.4.0
 servers:
   - url: https://raweceek.eu/api
 tags:
@@ -12,6 +12,14 @@ paths:
     get:
       tags:
         - Session
+      parameters:
+        - name: series
+          in: query
+          required: false
+          schema:
+            type: string
+            default: f1
+          description: The racing series to filter sessions by
       responses:
         '200':
           description: List of upcoming sessions
@@ -25,13 +33,20 @@ paths:
     get:
       tags:
         - Session
+      parameters:
+        - name: series
+          in: query
+          required: false
+          schema:
+            type: string
+            default: f1
+          description: The racing series to filter sessions by
       responses:
         '200':
           description: Next session by startTime
           content:
             application/json:
               schema:
-                type: object
                 $ref: "#/components/schemas/SessionDto"
         '404':
           description: Not found
@@ -39,6 +54,14 @@ paths:
     get:
       tags:
         - Session
+      parameters:
+        - name: series
+          in: query
+          required: false
+          schema:
+            type: string
+            default: f1
+          description: The racing series to filter sessions by
       responses:
         '200':
           description: Countdown until the next session by startTime
@@ -75,6 +98,8 @@ components:
         - summary
         - location
         - startTime
+        - timeUntil
+        - series
       properties:
         summary:
           type: string
@@ -89,6 +114,9 @@ components:
         timeUntil:
           type: string
           example: 8 hour(s) 48 minute(s) 56 second(s)
+        series:
+          type: string
+          example: f1
     CountdownDto:
       type: object
       required:
